
-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.39

-BUG FIX: Fixed 'address-balance-tracker' plugin getting currency conversion values (for the primary currency set in the Currency Support section)

-BUG FIX: Fixed CoinMarketCap.com support

-BUG FIX: Miscellaneous fixes

-Upgraded Jupiter Aggregator exchange API, including case-sensitive support for asset IDs, addition of market trade volume data, and asset search

-Refactoring / optimization of ENTIRE markets API data parsing logic (for 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)

-Added Admin Config settings for: Portfolio Assets (adding / removing assets and markets is FINALLY available in the interface now)

-More reliable currency price conversions (between different currencies)

-Optimizations / polish / cleanup on the Access Stats UX, and app logic

-Cleaned up stale DEMO markets / news feeds / text gateways

-Optimized / cleaned up page loading logic

-Increased reliability of app runtime 

-Upgraded Idex exchange API to v4

-Upgraded ZingChart to v2.9.14

-Upgraded Kraken exchange API

IMPORTANT *UPGRADE* NOTICES:

v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.40

-BUG FIX: Fixed app hanging / freezing, when SMTP server user settings are added (for sending email-based alerts / etc), BUT THE SMTP SERVER IS OFFLINE / MISCONFIGURED

-Backup routine for user configuration data

-Backup files listed in "Reset / Backup & Restore" admin section (with download links)

-Housekeeping / refactoring / optimization on the codebase

-Cleaned up DEMO config

-------------------------------------------------------------------








